# ilo-pi-toki-pona-taso

./: .gitignore  Dockerfile  Makefile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  docker-compose.yml  edgedb.toml  pyproject.toml  sample.env
dbschema/: default.esdl
src/tenpo/: __main__.py  autocomplete_utils.py  chat_utils.py  constants.py  croniter_utils.py  db.py  icon_banner_utils.py  image_utils.py  log_utils.py  phase_utils.py  rules_menu.py  str_utils.py  test_helpers.py  toki_pona_utils.py  types.py
src/tenpo/cogs/debug/: __init__.py  cog.py
src/tenpo/cogs/events/: __init__.py  cog.py
src/tenpo/cogs/icons/: __init__.py  cog.py
src/tenpo/cogs/mu/: __init__.py  cog.py
src/tenpo/cogs/o-toki-pona-taso/: __init__.py  cog.py
src/tenpo/cogs/phase-calendar/: __init__.py  cog.py
src/tenpo/cogs/rules/: __init__.py  cog.py
tests/: english_phonomatches.py  profile.py  sitelen_sorter.py  test_constants.py  test_db.py  test_emoji.py  test_nasin_sitelen.py  test_nimi.py  test_phase_utils.py  test_tenpo_db.py  test_tpt.py
tests/nimi/: OLUKIN.md  nimi_ike.txt  nimi_ken.txt  nimi_lipu.txt  nimi_pona.txt  nimi_sitelen.txt
