[tool.pdm]

[project]
name = "tenpo"
version = "0.1.0"
description = ""
authors = [
  { name = "Gregory Danielson", email = "gregory.danielson3@gmail.com" },
]
dependencies = [
    "skyfield>=1.45",
    "py-cord[speed]>=2.4.0",
    "datetime>=5.0",
    "pytest>=7.2.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.23.3",
    "sqlalchemy[asyncio]>=2.0.6",
    "sqlalchemy-utils>=0.40.0",
    "aiosqlite>=0.18.0",
    "asyncinit>=0.2.4",
    "sqlalchemy-json>=0.5.0",
    "unidecode>=1.3.6",
    "emoji>=2.2.0",
]
requires-python = ">=3.10"
license = { text = "" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pdm.dev-dependencies]
dev = ["black>=23.1.0", "isort~=5.9", "pytest-asyncio>=0.20.3"]

[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "LOCAL"


[tool.pyright]
include = ["src/tenpo"]
exclude = ["**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
stubPath = ""

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "src/tenpo" }]
