[tool.pdm]

[project]
name = "tenpo"
version = "1.0.0"
description = ""
authors = [
  { name = "Gregory Danielson", email = "gregory.danielson3@gmail.com" },
]
dependencies = [
    "skyfield",
    "py-cord[speed]",
    "datetime",
    "pytest",
    "python-dotenv",
    "httpx",
    "sqlalchemy[asyncio]",
    "sqlalchemy-utils",
    "aiosqlite",
    "asyncinit",
    "sqlalchemy-json",
    "unidecode",
    "emoji",
]
requires-python = ">=3.10"
license = { text = "" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pdm.dev-dependencies]
dev = ["black>=23.1.0", "isort~=5.9", "pytest-asyncio>=0.20.3"]

[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "LOCAL"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/__pypackages__", "**/.venv"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "." }]
