[project]
name = "tenpo"
version = "1.0.0"
description = ""
authors = [
  { name = "Gregory Danielson", email = "gregory.danielson3@gmail.com" },
]
dependencies = [
    "skyfield>=1.53",
    "py-cord[speed]>=2.6.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy[asyncio]",
    "sqlalchemy-utils>=0.41.2",
    "aiosqlite>=0.21.0",
    "sqlalchemy-json>=0.7.0",
    "croniter>=6.0.0",
    "pytimeparse>=1.1.8",
    "sonatoki>=0.11.1",
]
requires-python = ">=3.11"
license = { text = "" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "LOCAL"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/__pypackages__", "**/.venv"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "." }]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "isort~=5.9",
    "pytest-asyncio>=0.20.3",
    "line-profiler>=4.1.1",
    "hypothesis>=6.86.1",
    "pytest-skip-slow>=0.0.5",
]

